# shadPS4

./: .clangd  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  emulator.cpp  emulator.h  main.cpp  sdl_window.cpp  sdl_window.h
src/audio_core/: sdl_audio.cpp
src/common/: alignment.h  bit_field.h  config.cpp  config.h  disassembler.cpp  disassembler.h  discord.cpp  discord.h  error.cpp  fs_file.cpp  fs_file.h  host_memory.cpp  host_memory.h  io_file.h  log.h  scope_exit.h  singleton.h  small_vector.h  string_util.cpp  string_util.h  types.h  va_ctx.h  version.h  virtual_buffer.h  virtual_memory.h
src/common/logging/: backend.cpp  filter.cpp  types.h
src/core/: address_space.cpp  address_space.h  blockpool.cpp  blockpool.h  cpu_patches.cpp  emulator.cpp  emulator.h  linker.cpp  linker.h  memory.cpp  memory.h  module.cpp  module.h  tls.cpp  virtual_memory.cpp  virtual_memory.h  vm_map.cpp  vm_map.h
src/core/aerolib/: aerolib.cpp  aerolib.h  stubs.cpp  stubs.h
src/core/devtools/widget/: memory_map.cpp  memory_map.h
src/core/file_sys/: fs.cpp  fs.h  generic_file_system.h  meta_file_system.cpp  meta_file_system.h
src/core/file_sys/devices/: base_device.h  blockpool_device.cpp  blockpool_device.h  console_device.cpp  console_device.h  deci_tty6_device.cpp  deci_tty6_device.h  dmem_device.cpp  dmem_device.h  logger.h  nop_device.h  random_device.cpp  random_device.h  rng_device.cpp  rng_device.h  srandom_device.cpp  srandom_device.h  urandom_device.cpp  urandom_device.h
src/core/file_sys/directories/: base_directory.cpp  (+5 more)
src/core/frontend/: emu_window.h
src/core/input/: controller.cpp  controller.h
src/core/kernel/: atomic.h  condvar.c  condvar.h  errno.h  imgact_self.c  imgact_self.h  intrusive_list.h  kern_umtx.cpp  kern_umtx.h  lock.c  lock.h  malloc.h  mman.h  mutex.c  mutex.h  proc.h  queue.h  rtprio.h  rwlock.c  rwlock.h  sema.c  sema.h  sleepq.c  sleepq.h  sx.c  sx.h  syscalls.h  systm.h  thread.h  time.h  types.h  umtx.c  umtx.h
src/core/libraries/: error_codes.h  libs.cpp  libs.h
src/core/loader/: elf.cpp  elf.h  symbols_resolver.cpp  symbols_resolver.h
src/core/memory/: address_space.cpp  address_space.h  blockpool.cpp  blockpool.h  budget.h  dmem_map.cpp  dmem_map.h  flexible_pool.cpp  flexible_pool.h  kernel.cpp  kernel.h  rmap_splay_tree.h  splay_tree.h  splay_tree.h.KaykpT  sx_lock.cpp  sx_lock.h  vm_map.cpp  vm_map.cpp.ifzdta  vm_map.h  vm_object.cpp  vm_object.h
src/graphics/: video_out_ctx.cpp  video_out_ctx.h  vk_common.cpp  vk_common.h  vk_instance.cpp  vk_instance.h  vk_platform.cpp  vk_platform.h  vk_scheduler.cpp  vk_scheduler.h  vk_swapchain.cpp  vk_swapchain.h
src/imgui/renderer/: imgui_impl_sdl3.cpp
src/input/: controller.cpp  controller.h
src/shad_sdl/: config.cpp  config.h  emu_window_sdl.cpp  emu_window_sdl.h  main.cpp
src/shader_recompiler/: analysis.cpp  analysis.h  compiler.cpp  compiler.h  compiler_control_flow.cpp  compiler_data_share.cpp  compiler_debug_profile.cpp  compiler_defs.h  compiler_export.cpp  compiler_scalar_alu.cpp  compiler_scalar_memory.cpp  compiler_vector_alu.cpp  compiler_vector_interpolation.cpp  compiler_vector_memory.cpp  decoder.cpp  decoder.h  fetch_shader.cpp  fetch_shader.h  header.cpp  header.h  info.h  instruction.cpp  instruction.h  instruction_iterator.cpp  instruction_util.cpp  instruction_util.h  module.cpp  module.h  program_info.cpp  program_info.h  recompiler.cpp  runtime_info.h  shader_binary.h  shader_key.h  shader_meta.h  specialization.h  state_register.cpp  state_register.h  util.h
src/shader_recompiler/backend/: bindings.h
src/shader_recompiler/control_flow/: control_flow_graph.cpp  control_flow_graph.h  divergent_flow.cpp  divergent_flow.h  dominator_tree.cpp  dominator_tree.h  loop_info.cpp  loop_info.h  stackifier.cpp  stackifier.h  token_list.cpp  token_list.h
src/shader_recompiler/frontend/: control_flow_graph.cpp  control_flow_graph.h  decode.cpp  format.cpp  instruction.h  structured_control_flow.cpp
src/shader_recompiler/ir/: attribute.cpp  attribute.h  basic_block.cpp  basic_block.h  breadth_first_search.h  ir_emitter.cpp  ir_emitter.h  microinstruction.cpp  opcodes.h  opcodes.inc  position.h  reg.h  reinterpret.h  type.h  value.cpp  value.h
src/shader_recompiler/spirv/: spirv_code_buffer.cpp  spirv_code_buffer.h  spirv_instruction.h  spirv_module.cpp  spirv_module.h
src/video_core/: memory_manager.cpp  memory_manager.h  memory_tracker.cpp  memory_tracker.h  multi_level_page_table.h  page_manager.cpp  page_manager.h  types.h  video_out_ctx.h  word_manager.h
src/video_core/amdgpu/: label_manager.cpp  label_manager.h  liverpool.cpp  liverpool.h  pixel_format.cpp  pixel_format.h  pm4_cmds.h  pm4_opcodes.h  resource.h  types.h
src/video_core/buffer_cache/: buffer.cpp  buffer.h  buffer_cache.cpp  buffer_cache.h  fault_manager.cpp  fault_manager.h  memory_tracker.h  memory_tracker_base.h  range_set.h  region_definitions.h  region_manager.h  word_manager.h
src/video_core/host_shaders/: detile_m32x2.comp  detile_m32x4.comp
src/video_core/renderer_vulkan/: liverpool_to_vk.cpp  liverpool_to_vk.h  pipeline_key.cpp  pipeline_key.h  renderer_vulkan.cpp  renderer_vulkan.h  vk_barrier_tracker.cpp  vk_barrier_tracker.h  vk_compute_pipeline.cpp  vk_compute_pipeline.h  vk_descriptor_update_queue.h  vk_graphics_pipeline.cpp  vk_graphics_pipeline.h  vk_instance.cpp  vk_instance.h  vk_logical_queue.cpp  vk_logical_queue.h  vk_master_semaphore.cpp  vk_master_semaphore.h  vk_pipeline_cache.cpp  vk_pipeline_cache.h  vk_pipeline_common.cpp  vk_pipeline_common.h  vk_platform.cpp  vk_platform.h  vk_presenter.cpp  vk_presenter.h  vk_rasterizer.cpp  vk_rasterizer.h  vk_resource_pool.cpp  vk_resource_pool.h  vk_runtime.cpp  vk_runtime.h  vk_scheduler.cpp  vk_scheduler.h  vk_shader_hle.cpp  vk_shader_util.cpp  vk_shader_util.h  vk_stream_buffer.cpp  vk_stream_buffer.h  (+2 more)
src/video_core/texture_cache/: blit_helper.cpp  image.cpp  image.h  image_info.cpp  image_info.h  image_view.cpp  image_view.h  slot_vector.h  texture_cache.cpp  texture_cache.h  tile_manager.cpp  tile_manager.h
(+177 files in other folders)
